istio-virtualservice/tiger-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web-svc
spec:
  ports:
  - name: port
    port: 80
    protocol: TCP
    targetPort: port
  selector:
    type: web
